@@ -18,10 +18,8 @@ Build-Depends:
  libgdbm-dev,
  quilt,
  bzip2,
- docbook-xml,
- docbook-utils,
  dh-ocaml (>= 0.4)
-Standards-Version: 3.8.0
+Standards-Version: 3.8.2
 Vcs-Git: git://git.debian.org/git/pkg-ocaml-maint/packages/ocaml.git
 Vcs-Browser: http://git.debian.org/?p=pkg-ocaml-maint/packages/ocaml.git
 Homepage: http://caml.inria.fr/
@@ -106,7 +104,7 @@ Architecture: any
 Depends:
  ${shlibs:Depends},
  ${misc:Depends},
- ocaml-nox (= ${binary:Version})
+ ocaml-nox (= ${binary:Version}),
  camlp4 (= ${binary:Version})
 Description: Pre Processor Pretty Printer for OCaml - extras
  Objective Caml (OCaml) is an implementation of the ML language,
@@ -240,7 +238,7 @@ Depends:
  ocaml-base-nox (= ${binary:Version}),
  ${shlibs:Depends},
  ${misc:Depends}
-Recommends: ledit | rlwrap
+Recommends: ledit | readline-editor
 Replaces: ocaml (<< 3.07.2a-3)
 Conflicts: ocaml (<< 3.07.2a-3)
 Description: OCaml interactive interpreter and standard libraries
